Fixed hero image height on small devices.

--- a/lesson10/css/small.css
+++ b/lesson10/css/small.css
@@ -272,6 +272,8 @@ footer a {
 #hero img {
     display: block;
     width: 100%;
+    min-height: 40vh;
+    object-fit: cover;
 }
 
 #weather_summary {
